2010-08-20  Glenn Morris  <rgm@gnu.org>

	* mail/rmail.el (rmail-forward): Replace mail-text-start with its
	expansion, so as not to need sendmail.
	(mail-text-start): Remove declaration.
	(rmail-retry-failure): Require sendmail.

2010-08-19  Stefan Monnier  <monnier@iro.umontreal.ca>

	* subr.el (read-key): Don't hide the menu-bar entries (bug#6881).

2010-08-18  Michael Albinus  <michael.albinus@gmx.de>

	* progmodes/flymake.el (flymake-start-syntax-check-process):
	Use `start-file-process' in order to let it run also on remote hosts.

2010-08-18  Kenichi Handa  <handa@m17n.org>

	* files.el: Add `word-wrap' as safe local variable.

2010-08-18  Glenn Morris  <rgm@gnu.org>

	* woman.el (woman-translate): Case matters.  (Bug#6849)

2010-08-14  Chong Yidong  <cyd@stupidchicken.com>

	* simple.el (kill-region): Doc fix (Bug#6787).

2010-08-14  Glenn Morris  <rgm@gnu.org>

	* calendar/diary-lib.el (diary-header-line-format):
	Fit it to the window, not the frame.

2010-08-11  Andreas Schwab  <schwab@linux-m68k.org>

	* subr.el (ignore-errors): Add debug declaration.

2010-08-09  Geoff Gole  <geoffgole@gmail.com>  (tiny change)

	* whitespace.el (whitespace-color-off): Remove post-command-hook
	locally.

2010-08-08  Johan Bockgård  <bojohan@gnu.org>

	* replace.el (replace-highlight): Bind isearch-forward and
	isearch-error, ensuring that highlighting is updated if the user
	switches the search direction (Bug#6808).

	* isearch.el (isearch-lazy-highlight-forward): New var.
	(isearch-lazy-highlight-new-loop, isearch-lazy-highlight-search):
	(isearch-lazy-highlight-update): Use it.

2010-08-06  Kenichi Handa  <handa@m17n.org>

	* international/mule.el (define-charset): Store NAME as :base property.
	(ctext-non-standard-encodings-table): Pay attention to charset aliases.
	(ctext-pre-write-conversion): Sort ctext-standard-encodings by the
	current priority.  Force using the designation of the specific
	charset by adding `charset' text property.  Improve the whole